fixed the z-index problem the two fixed buttons had. Also changed the way but add item button slides in, and fixed its initial position to prevent it from displaying only on mobile devices. Added a simple slide in animation for the cart component.

--- a/frontend/src/styles/MenuItem.module.css
+++ b/frontend/src/styles/MenuItem.module.css
@@ -9,21 +9,19 @@
     @apply mobile:max-w-[100%];
     
 }
-.menuItem button, .pos-menu-item button {
+.menuItem button {
 @apply text-[1.2rem] absolute p-[40px] self-end place-self-center mb-[-100px] font-semibold align-bottom text-[white] bg-[#A760FF] py-[8px] border-none;
     &:active {
         @apply bg-[--active-button-color];
     }
     transition: margin 0.3s ease;
 }
-.pos-menu-item button {
-    @apply mb-[-140%];
-    transition: margin 0.13s ease-in-out;
-}
+
 .menuItem:hover button , .pos-menu-item:hover button{
     filter: opacity(0.95);
     @apply bg-[#A760FF];
-    margin-bottom: 0;
+    
+
 }
 
 .menuItemPictureAndPriceGroup {
@@ -67,7 +65,20 @@
 }
 .number-indicator{
     @apply flex absolute top-[10px] outline font-semibold w-[30px] text-center;
-    @apply right-[15px] rounded-[50%] h-[30px] justify-center items-center text-[--foreground] bg-white text-[1rem] z-10;
+    @apply right-[15px] rounded-[50%] h-[30px] justify-center items-center text-[--foreground] bg-white text-[1rem];
+    z-index: inherit;
     outline-color: rgb(43, 11, 48);
     outline-width: 2px;
+}
+
+.add-item-button-pos{
+    @apply text-[1.2rem] top-[100%] h-full absolute p-[40px] self-end place-self-center font-semibold align-bottom text-[white] bg-[#A760FF] py-[8px] border-none;
+    &:active {
+        @apply bg-[--active-button-color];
+    }
+    transition: transform 0.13s ease-in-out;
+}
+
+.pos-menu-item:hover .add-item-button-pos{
+    transform: translateY(-100%);
 }
